# online_shop

./: .env.example  .env.local.example  .env.prod.example  .env.stripe.example  .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: Dockerfile  createsuperuser.py  db_data.json  pyproject.toml
backend/backend/: celery.py  urls.py
backend/backend/settings/: base.py  local.py  prod.py
backend/cart/: cart.py  context_processors.py  urls.py  views.py
backend/cart/templates/cart/: detail.html
backend/coupons/: models.py  urls.py  views.py
backend/coupons/migrations/: 0001_initial.py
backend/orders/: admin.py  models.py  tasks.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_rename_orders_orde_created_743fca_idx_orders_created_e28e23_idx_and_more.py  0003_order_stripe_id.py  0004_order_coupon_order_discount.py
backend/orders/templates/admin/orders/order/: detail.html
backend/orders/templates/orders/order/: create.html  created.html  pdf.html
backend/payment/: tasks.py  urls.py  views.py  webhooks.py
backend/payment/templates/payment/: process.html
backend/shop/: admin.py  models.py  recommender.py  urls.py  views.py
backend/shop/fixtures/: db_data.json
backend/shop/migrations/: 0001_initial.py  0002_rename_shop_catego_name_289c7e_idx_categories_name_98d7d5_idx_and_more.py
backend/shop/templates/shop/: base.html
backend/shop/templates/shop/product/: detail.html  list.html
backend/static/css/: base.css
